feat: update dependencies and improve component structure
- Added React and related type definitions to package.json.
- Updated Subtitle component to change heading size.
- Adjusted padding in AboutSection component for better layout.
- Enhanced CVButton component with smoother transition duration.
- Modified BarNav and HeaderSideBar components to include icons alongside titles.
- Updated ProjectButton component to conditionally render based on link availability.
- Integrated ClientRouter in Layout for improved navigation.
- Updated types to include icon property for header items.
- Configured TypeScript to support React JSX syntax.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,22 @@
 {
   "extends": "astro/tsconfigs/strict",
-  "include": [".astro/types.d.ts", "**/*", "src/types/svg.d.ts"],
-  "exclude": ["dist", "**/*.astro"],
+  "include": [
+    ".astro/types.d.ts",
+    "**/*",
+    "src/types/svg.d.ts"
+  ],
+  "exclude": [
+    "dist",
+    "**/*.astro"
+  ],
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@/*":[
+      "@/*": [
         "./src/*"
       ]
-    }
+    },
+    "jsx": "react-jsx",
+    "jsxImportSource": "react"
   }
 }
